--- a/src/main/resources/templates/erroricinfo.html
+++ b/src/main/resources/templates/erroricinfo.html
@@ -1,24 +1,22 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>Error</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<html>
+	<head>
+		<title>Error</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<link rel="stylesheet" href="/bootstrap.min.css" media="screen" />
-</head>
-<body>
-
-	<div class="container" style="margin-top: 50px">
-		<div>
-			<img src="logo.png" class="img-responsive left-block" width="100"
-				height="50" alt="Logo" />
+		<link rel="stylesheet" href="/bootstrap.min.css" media="screen" />
+	</head>
+	<body>
+		<div class="container" style="margin-top: 50px">
+			<div>
+				<img src="logo.png" class="img-responsive left-block" width="100"
+					height="50" alt="Logo" />
+			</div>
+			<h4 align="center">Something went wrong :( </h4>
+			<h4 align="center">It seems that you are already register. Please check the information you entered or go to Recurring visitor if this isn't your first visit to Deloitte</h4>
+			<form action="/index" method="get">
+				<input type="image" src="incorrect.png" class="img-responsive center-block" width="400" height="400" alt="incorrectInfo"/>
+			</form>
 		</div>
-		<h4 align="center">Something went wrong :( </h4>
-		<h4 align="center">It seems that you are already register. Please check the information you entered or go to Recurring visitor if this isn't your first visit to Deloitte</h4>
-		<form action="/index" method="get">
-			<input type="image" src="incorrect.png" class="img-responsive center-block" width="400" height="400" alt="incorrectInfo"/>
-		</form>
-	</div>
-</body>
-
+	</body>
 </html>
