--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>WELCOME</title>
+	<head>
+		<title>WELCOME</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<link rel="stylesheet" href="/bootstrap.min.css" />
-</head>
-<body>
-	<div class="container" style="margin-top: 50px">
-
-		<div>
-			<img src="logo.png" class="img-responsive left-block" width="100"
-				height="50" alt="Logo" />
+		<link rel="stylesheet" href="/bootstrap.min.css" />
+	</head>
+	<body>
+		<div class="container" style="margin-top: 50px">
+			<div>
+				<img src="logo.png" class="img-responsive left-block" width="100"
+					height="50" alt="Logo" />
+			</div>
+			<div>
+				<form action="/register" method="get">
+					<input type="image" src="New.png"
+						class="img-responsive center-block" width="400" height="400"
+						alt="New visitor" />
+				</form>
+			</div>
+			<br />
+			<br />
+			<div>
+				<form action="/searchForBadgeReturn" method="get">
+					<input type="image" src="Recurring.png"
+						class="img-responsive center-block" width="400" height="400"
+						alt="Badge return" style="background-color: black" />
+				</form>
+			</div>
+			<br />
+			<br />
+			<div>
+				<form action="/searchRecurringVisitor" method="get">
+					<input type="image" src="Second.png"
+						class="img-responsive center-block" width="400" height="400"
+						alt="Recurring visitor" />
+				</form>
+			</div>
 		</div>
-
-		<div>
-			<form action="/register" method="get">
-				<input type="image" src="New.png"
-					class="img-responsive center-block" width="400" height="400"
-					alt="New visitor" />
-			</form>
-		</div>
-		<br />
-		<br />
-		<div>
-			<form action="/search" method="get">
-				<input type="image" src="Recurring.png"
-					class="img-responsive center-block" width="400" height="400"
-					alt="Badge return" style="background-color: black" />
-			</form>
-		</div>
-		<br />
-		<br />
-		<div>
-			<form action="/search2" method="get">
-				<input type="image" src="Second.png"
-					class="img-responsive center-block" width="400" height="400"
-					alt="Recurring visitor" />
-			</form>
-		</div>
-
-	</div>
-</body>
+	</body>
 </html>
 
