--- a/src/main/resources/templates/othervisit.html
+++ b/src/main/resources/templates/othervisit.html
@@ -1,107 +1,105 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<link rel="stylesheet" href="/bootstrap.min.css" media="screen" />
-<link rel="stylesheet" href="/css/main.css"/>
+		<link rel="stylesheet" href="/bootstrap.min.css" media="screen" />
+		<link rel="stylesheet" href="/css/main.css"/>
 
-<script src="/jquery.js"></script>
-<script src="/jquery.autocomplete.min.js"></script>
+		<script src="/jquery.js"></script>
+		<script src="/jquery.autocomplete.min.js"></script>
 
-<script th:inline="javascript">
+		<script th:inline="javascript">
+			$(document).ready(function() {
+					 $('#employeeAutocomplete').autocomplete({
+						serviceUrl: '/getEmployees',
+						paramName: "empFullName",
+						delimiter: ",",
+						onSelect: function (suggestion) {
+								document.getElementById("employee").value = suggestion.data;
+						},
+						transformResult: function(response) {
 
-$(document).ready(function() {
+							 return {
+								suggestions: $.map($.parseJSON(response), function(employee) {
+									return { value:employee.empFullName, data: employee.empId };
+								})
+							};
+						}
+					});
+				});
+		</script>
+		<script type="text/javascript">
+			/* function inform(){
+				 alert("Enjoy your visit! Please logout when your visit has finished.");
+			} */
+		</script>
+	</head>
+	<body>
+		<div class="container" style="margin-top: 50px">
+			<div>
+				<img src="logo.png" class="img-responsive left-block" width="100"
+					 height="50" alt="Logo" />
+			</div>
+			<h3 align="center">Please fill the missing information </h3>
+			<br />
 
-		 $('#employeeAutocomplete').autocomplete({
-			serviceUrl: '/getEmployees',
-			paramName: "empFullName",
-			delimiter: ",",
-		    onSelect: function (suggestion) {
-		    		document.getElementById("employee").value = suggestion.data;
- 		    },
-		    transformResult: function(response) {
-		    	
-		         return {
-		            suggestions: $.map($.parseJSON(response), function(employee) {
-		                return { value:employee.empFullName, data: employee.empId };
-		            })
-		        }; 
-		    }	    
-		});
-	});
-</script> 
-<script type="text/javascript">
-/* function inform(){
-	 alert("Enjoy your visit! Please logout when your visit has finished.");
-} */
-</script>
-</head>
-<body>
+			<form action="#" th:action="@{/saveothervisit}" method="post">
+				<table>
+					<tr>
+						<td>Full Name *:</td>
+						<td height="40px"><input type="text" th:field="*{visitor.fullName}" />
+							<input type="hidden" th:field="*{visitor.id}" /></td>
+					</tr>
 
-	<div class="container" style="margin-top: 50px">
-		<div>
-			<img src="logo.png" class="img-responsive left-block" width="100"
-				height="50" alt="Logo" />
-		</div>
-		<h3 align="center">Please fill the missing information </h3>
-		<br />
+					<tr>
+						<td>Identity card / passport number *:</td>
+						<td height="40px"><input type="text"
+												 th:field="*{visitor.identityCardInfo}" /></td>
+					</tr>
+					<tr>
+						<td>Deloitte employee visited *:</td>
+						<td height="40px" >
+							<input  type ="text" id="employeeAutocomplete"/>
+							<input type="hidden" id="employee" value="" th:field="*{visit.employee}"/>
+						</td>
+						<td th:if="${#fields.hasErrors('visit.employee')}" class="help-block"
+							th:errors="*{visit.employee}"></td>
+					</tr>
 
-		<form action="#" th:action="@{/saveothervisit}" method="post">
-			<table>
-				<tr>
-					<td>Full Name *:</td>
-					<td height="40px"><input type="text" th:field="*{visitor.fullName}" />
-					<input type="hidden" th:field="*{visitor.id}" /></td>
-				</tr>
+					<tr>
+						<td>Badge number:</td>
+						<td height="40px"><input type="text" th:field="*{visit.badgeNumber}"
+												 th:value="${visit.badgeNumber}" th:name="${badgeNumber}"/>
+							<input type="hidden" th:field="*{visit}"
+								   th:value="${visit.visitId}" th:text="${visit.visitId}" th:name="${visitId}"/></td>
+						<td th:if="${#fields.hasErrors('visit.badgeNumber')}" class="help-block"
+							th:errors="*{visit.badgeNumber}"></td>
+					</tr>
+					<tr>
+						<td height="40px">BadgeType :</td>
+						<td>
+							<select th:field="${visit.badgeType}">
+								<option value="">Select the badge type</option>
+								<option
+										th:each="badgeType : ${badgeTypes}"
+										th:value="${badgeType}" th:text="${badgeType.displayName}" th:name="${badgeType}" ></option>
+							</select>
+						</td>
+					</tr>
 
-				<tr>
-					<td>Identity card / passport number *:</td>
-					<td height="40px"><input type="text"
-						th:field="*{visitor.identityCardInfo}" /></td>
-				</tr>
-				<tr>
-					<td>Deloitte employee visited *:</td>
-					<td height="40px" >
-					<input  type ="text" id="employeeAutocomplete"/>
-					<input type="hidden" id="employee" value="" th:field="*{visit.employee}"/>
-					</td>
-					<td th:if="${#fields.hasErrors('visit.employee')}" class="help-block"
-						th:errors="*{visit.employee}"></td>
-				</tr>
+				</table>
+				<h4 align="center">The information displayed is correct? Please update and save</h4>
+				<input class="btn btn-info btn-block" type="submit" value="Save the information"/>
 				
-				<tr>
-					<td>Badge number:</td>
-					<td height="40px"><input type="text" th:field="*{visit.badgeNumber}" 
-					th:value="${visit.badgeNumber}" th:name="${badgeNumber}"/>
-					 <input type="hidden" th:field="*{visit}"
-						th:value="${visit.visitId}" th:text="${visit.visitId}" th:name="${visitId}"/></td> 
-					<td th:if="${#fields.hasErrors('visit.badgeNumber')}" class="help-block"
-						th:errors="*{visit.badgeNumber}"></td>
-				</tr> 
-				<tr>
-				<td height="40px">BadgeType :</td>
-				<td>
-					<select th:field="${visit.badgeType}">
-					<option value="">Select the badge type</option>
-						<option
-							th:each="badgeType : ${badgeTypes}"
-							th:value="${badgeType}" th:text="${badgeType.displayName}" th:name="${badgeType}" ></option>
-					</select>
-				</td>
-				</tr>
-				
-			</table>
-			<h4 align="center">The information displayed is correct? Please update and save</h4>
-			<input class="btn btn-info btn-block" type="submit" value="Save the information" onclick="inform()"/>
-		</form>
-		
-		<h4 align="center">The information displayed is NOT correct, these aren't your data? Please click Return button</h4>
+			</form>
+
+			<h4 align="center">The information displayed is NOT correct, these aren't your data? Please click Return button</h4>
 			<form action="/index" method="get">
-			<input class="btn btn-danger btn-block btn-sm" onclick="window.location.href = '/confirm'" value ="Return"/>
-		</form>
-	</div>
-</body>
+				<input class="btn btn-danger btn-block btn-sm" onclick="window.location.href = '/index'" value ="Return"/>
+			</form>
+		</div>
+	</body>
 </html>
 
 
