--- a/src/main/resources/templates/searchRecurringVisitor.html
+++ b/src/main/resources/templates/searchRecurringVisitor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<title>Visitors</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,10 +12,12 @@
 				<img src="logo.png" class="img-responsive left-block" width="100"
 					height="50" alt="Logo" />
 			</div>
-			<h4 align="center">Something went wrong :( </h4>
-			<h4 align="center">Please check the information you entered.</h4>
-			<form action="/index" method="get">
-				<input type="image" src="incorrect.png" class="img-responsive center-block" width="400" height="400" alt="incorrectInfo"/>
+			<h3 align="center">Search for your information using</h3>
+			<h3 align="center">the identity card / passport information that you provide</h3>
+			<br />
+		 	<form action="/othervisit" method="get">
+				<input type="text" name="search2" id="search2" th:value="${search2}" />
+				<input class="btn btn-info btn-block" type="submit" value="Search" />
 			</form>
 		</div>
 	</body>
